# dircont

./: .gitignore  README.md  add-features.md  extra.txt  pyproject.toml  script.bat
dircont/: main.py
dircont.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
